--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
         <h1>Telegram String Session Generator</h1>
         <form id="sessionForm">
             <div class="form-group">
-                <label for="apiId">API ID:</label>
-                <input type="text" id="apiId" name="apiId" required>
-            </div>
-            <div class="form-group">
-                <label for="apiHash">API Hash:</label>
-                <input type="text" id="apiHash" name="apiHash" required>
-            </div>
-            <div class="form-group">
                 <label for="phoneNumber">Phone Number:</label>
                 <input type="text" id="phoneNumber" name="phoneNumber" required>
             </div>
@@ -26,6 +18,31 @@
         </form>
         <div id="result" class="result"></div>
     </div>
-    <script src="scripts.js"></script>
+    <script>
+        document.getElementById('sessionForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            const phoneNumber = document.getElementById('phoneNumber').value;
+
+            fetch('/generate_session', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ phone_number: phoneNumber })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.error) {
+                    document.getElementById('result').textContent = data.error;
+                } else {
+                    document.getElementById('result').textContent = `Generated Session:\n${data.string_session}`;
+                }
+            })
+            .catch(error => {
+                document.getElementById('result').textContent = 'An error occurred. Please try again.';
+            });
+        });
+    </script>
 </body>
 </html>
